# finsight

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  airflow.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: edgar_backfill_dag.py  edgar_ingest_dag.py  embed_dag.py  transform_dag.py
finsight/: config.py
finsight/agent/: evaluator.py  guardrails.py  planner.py  tools.py
finsight/api/: dependencies.py  main.py
finsight/api/middleware/: auth.py  logging.py  rate_limit.py
finsight/api/routers/: agent.py  filings.py  health.py
finsight/database/: audit_store.py  chunk_store.py  connection.py  filing_store.py  tenant_store.py
finsight/database/migrations/: 001_init.sql  002_vector_store.sql  003_audit.sql
finsight/domain/: errors.py  types.py
finsight/embedding/: embedder.py  pipeline.py
finsight/ingestion/: downloader.py  edgar_client.py
finsight/quality/: checks.py  reporter.py
finsight/retrieval/: searcher.py
finsight/storage/: object_store.py  parquet_store.py
finsight/transform/: chunker.py  html_parser.py  parquet_writer.py
frontend/: index.html
scripts/: create_minio_bucket.py  docker-init.sh  seed_tenant.py  verify_pipeline.py
tests/: conftest.py
tests/integration/: test_agent_tools.py  test_ingestion_pipeline.py
tests/unit/: test_chunker.py  test_edgar_client.py  test_evaluator.py  test_guardrails.py  test_quality_checks.py
