[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsight"
version = "0.1.0"
description = "Financial Research Data Pipeline + RAG Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "pyarrow>=16.0.0",
    "duckdb>=0.10.3",
    "boto3>=1.34.0",
    "aiobotocore>=2.13.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring live services (deselect with '-m not integration')",
]
